<resources>
    <string name="app_name">Ejercicio Navidad Joan</string>
    <string name="title">Título</string>

    <string name="action_save">Guardar</string>
    <string name="title_activity_detail">Nueva Oportunidad</string>

    <!-- Strings de diálogo personalizado -->
    <string name="info_text">Necesitas tener creada una cuenta para iniciar la aplicación</string>
    <string name="info_user">Introduzca un Usuario:</string>
    <string name="info_spinner">o seleccione uno:</string>
    <string name="prueba">Prueba</string>
    <string name="crearUsers_boton">CREAR USERS</string>
    <string name="crear_boton">CREAR CUENTA</string>
    <string name="nombre_input">Nombre</string>
    <string name="contrasena_input">Contraseña</string>
    <string name="contrasena_repeat">Repita la Contraseña</string>
    <string name="recordar_check">Recordarme</string>
    <string name="olvidar_text">¿Olvidaste tu Contraseña?</string>
    <string name="user_input">Usuario</string>
    <string name="apellidos_input">Apellidos</string>
    <string name="dni_input">DNI</string>
    <string name="telefono_input">Telefono</string>
    <string name="email_input">Email</string>
    <string name="entrar_boton">ENTRAR</string>
    <string name="cliente_label">Cliente</string>
    <string name="producto_label">Producto</string>
    <string name="fecha_label">Fecha</string>
    <string name="prioridad_label">Prioridad</string>
    <string name="notas_label">Notas</string>
    <string name="notas_hint">Notas</string>
    <string name="TituloAcercaDe">Acerca De:</string>
    <string name="AcercaDe">\nVersion 0.9.\n\nCopyright © 2016 Joan Piera Simó.\nTodos los derechos reservados.</string>


</resources>
