<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#fffefe"
    android:layout_marginBottom="@dimen/normal_padding"
    android:id="@+id/campoLinear">

    <TextView
        android:id="@+id/userUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:text="User"
        android:drawableStart="@mipmap/user24"
        android:textAppearance="?android:attr/textAppearanceSmall" />


    <TextView
        android:id="@+id/userPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userUsuario"
        android:layout_centerHorizontal="true"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:text="@string/contrasena_input"
        android:drawableStart="@mipmap/password"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/userDni"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userPassword"
        android:layout_centerHorizontal="true"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:text="@string/dni_input"
        android:drawableStart="@mipmap/dni"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/userNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userDni"
        android:layout_centerHorizontal="true"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:text="@string/nombre_input"
        android:drawableStart="@mipmap/nombre"
        android:textAppearance="?android:attr/textAppearanceSmall" />


    <TextView
        android:id="@+id/userApellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userNombre"
        android:layout_centerHorizontal="true"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:text="@string/apellidos_input"
        android:drawableStart="@mipmap/apellido"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/userEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userApellidos"
        android:layout_centerHorizontal="true"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:text="@string/email_input"
        android:drawableStart="@mipmap/mail"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/userTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userEmail"
        android:layout_centerHorizontal="true"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:text="@string/telefono_input"
        android:drawableStart="@mipmap/telefono"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <FrameLayout
        android:id="@+id/LineaCabecera"
        android:layout_width="fill_parent"
        android:layout_height="7px"
        android:layout_span="6"
        android:background="#ff000000"
        android:layout_weight="1">
    </FrameLayout>

</LinearLayout>